basic knowlege about angular

--- a/myProject/src/app/server/server.component.html
+++ b/myProject/src/app/server/server.component.html
@@ -1,1 +1,15 @@
+<button class="btn btn-primary"
+[disabled]="! allowNewServer" (click) = "onCreateServer()"  > Submit</button>
+<p> {{ serverCreate }}</p>
 <p> server component </p>
+<p>{{ serverId }} </p>
+<p>{{ serverStatus }} </p>
+
+<p innerText='true'>sdaf <p>
+
+<p> {{serverName}} </p>
+
+<input type="text" class="form-control" (input)= "onUpdateServerName($event)">
+
+Email: ankitak@selectsourceintl.com
+Password: 1234567
