--- a/myProject/src/app/app.component.html
+++ b/myProject/src/app/app.component.html
@@ -1,2 +1,17 @@
- <h1> Jaskaran </h1>
- {{  name }}
+<div class="container">
+	<div class="row">
+		<div class="col-xs-12">
+			<h3> I'm in the app component</h3>
+			<hr>
+			<h1> Jaskaran {{  name }}</h1>
+			<app-server></app-server>
+			 
+		</div>
+	</div>
+</div>
+
+
+ 
+ 
+
+
