two way binding

--- a/myProject/src/app/server/server.component.html
+++ b/myProject/src/app/server/server.component.html
@@ -13,3 +13,7 @@
 
 Email: ankitak@selectsourceintl.com
 Password: 1234567
+
+<p *ngIf="SCreated">
+	Server was created, server name is {{ serverName}}
+</p>
